# PrivateGPT-Secure-RAG-Based-Document-Intelligence-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  implementation-plan.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  __init__.py
api/: __init__.py  main.py  websocket.py
api/routes/: __init__.py  admin.py  analytics.py  auth.py  documents.py  query.py
config/: __init__.py  logging_config.py  settings.py
core/: __init__.py  dependencies.py  exceptions.py  middleware.py  security.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
models/: __init__.py  audit.py  database.py  document.py  schemas.py  user.py
scripts/: benchmark.py  create_admin.py  run_worker.py  setup_db.py  verify.ps1
services/: __init__.py  analytics_service.py  audit_service.py  auth_service.py  document_service.py  embedding_service.py  llm_service.py  rag_pipeline.py  retrieval_service.py  vector_store.py
services/ingestion/: __init__.py  chunker.py  loaders.py  pipeline.py  processor.py
streamlit_app/: app.py  utils.py
streamlit_app/components/: __init__.py  chat_message.py  document_card.py  sidebar.py
streamlit_app/pages/: 1_📄_Documents.py  2_💬_Chat.py  3_⚙️_Settings.py  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_chunking.py  test_ingestion.py  test_rag_pipeline.py  test_retrieval.py  test_settings.py  test_vector_store.py  test_vector_store_lazy_init.py
(+2 files in other folders)
